<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/couple"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/result_text"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/lightGreen"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/answer_layout"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/note"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/note_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/replayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/ok_btn_lo"
            android:text="@string/play_again"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/cancel_btn_lo"
            android:text="@string/exit"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>