<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_answer"
        android:background="#D44"
        android:textColor="#FFF"
        android:textSize="18sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q1"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q1_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q2"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q2_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q3"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q3_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q4"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q4_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q5"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q5_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q6"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q6_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q7"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q7_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q8"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q8_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q9"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q9_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q10"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q10_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q11"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q11_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q12"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q12_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q13"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q13_options"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/gradient"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q14"
                        android:textSize="18sp"
                        android:textColor="#FFF"/>
                    <Spinner
                        android:id="@+id/answer14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/line_box"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:entries="@array/q14_options"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/resultBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ok_btn_lo"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/show_result"
                android:textColor="#FFF"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>